--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Official Website of Maligaya Taxi</title>
-		<link rel="icon" href="assets/img/maligaya.ico">
-		<link rel="stylesheet" type="text/css" href="assets/css/grid-style.css?v=1.0">
+		<title>Convert HEX to RGB Vice Versa</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-		<script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 		<style type="text/css">
 			* {
 			    margin: 0;
